<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context="id.general.feature.auth.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="@dimen/wrapper"
        android:src="@drawable/logo_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unauthorizedWarningText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/wrapper"
        android:background="#ef4953"
        android:padding="8dp"
        android:text="@string/login_single_warning"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.general.common.customview.CustomTextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="@dimen/wrapper"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:theme="@style/hintTextWhite"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hintTextWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unauthorizedWarningText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_bold"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textAppearance="@style/hintTextWhite"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </com.general.common.customview.CustomTextInputLayout>

    <com.general.common.customview.CustomTextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/wrapper"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:theme="@style/hintTextWhite"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hintTextWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_bold"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textAppearance="@style/hintTextWhite"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </com.general.common.customview.CustomTextInputLayout>

    <TextView
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gotham_book"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        style="@style/whiteButton"
        android:stateListAnimator="@animator/button_pressed_effect"
        android:backgroundTint="@color/white"
        android:layout_margin="@dimen/wrapper"
        app:layout_constraintBottom_toTopOf="@id/activationBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/activationBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activation"
        style="@style/borderWhiteButton"
        android:stateListAnimator="@animator/button_pressed_effect"
        android:layout_marginHorizontal="@dimen/wrapper"
        android:layout_marginBottom="@dimen/wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
