<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_primary"
    >

    <com.general.common.customview.CustomTextInputLayout
        android:id="@+id/input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="@dimen/dimen_small"
        android:layout_marginEnd="@dimen/wrapper"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:theme="@style/hintTextWhite"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hintTextWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_bold"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textAppearance="@style/hintTextWhite"
            />


    </com.general.common.customview.CustomTextInputLayout>

    <com.general.common.customview.CustomTextInputLayout
        android:id="@+id/input_layout_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="@dimen/dimen_small"
        android:layout_marginEnd="@dimen/wrapper"
        android:hint="@string/full_name"
        android:textColorHint="@color/white"
        android:theme="@style/hintTextWhite"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hintTextWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_bold"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textAppearance="@style/hintTextWhite"
            />
    </com.general.common.customview.CustomTextInputLayout>

    <Spinner
        android:id="@+id/spinnerUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User Type"
        />

    <com.general.common.customview.CustomTextInputLayout
        android:id="@+id/input_layout_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="@dimen/dimen_small"
        android:layout_marginEnd="@dimen/wrapper"
        android:hint="@string/username_phone"
        android:textColorHint="@color/white"
        android:theme="@style/hintTextWhite"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hintTextWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_bold"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textAppearance="@style/hintTextWhite"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </com.general.common.customview.CustomTextInputLayout>

    <com.general.common.customview.CustomTextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wrapper"
        android:layout_marginTop="@dimen/dimen_small"
        android:layout_marginEnd="@dimen/wrapper"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:theme="@style/hintTextWhite"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hintTextWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_bold"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textAppearance="@style/hintTextWhite"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </com.general.common.customview.CustomTextInputLayout>


    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        style="@style/whiteButton"
        android:stateListAnimator="@animator/button_pressed_effect"
        android:backgroundTint="@color/white"
        android:layout_margin="@dimen/wrapper"
        />

</LinearLayout>